--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="header-content">
                 <h4 class="header-subtitle" >Hello, I am</h4>
                 <h1 class="header-title">Dinh Trac Duc Anh</h1>
-                <h6 class="header-mono" >Junior | Machine Learning Engineer</h6>
+                <h6 class="header-mono" >Intern | Machine Learning Engineer</h6>
                 <a href = "CV/MY_CV.pdf" download="DINH TRAC DUC ANH"><button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Print Resume</button></a>
             </div>
         </div>
@@ -51,7 +51,7 @@
                     <img src="assets/imgs/avatar.png" alt="" class="brand-img">
                     <li class="brand-txt">
                         <h5 class="brand-title">Dinh Trac Duc Anh</h5>
-                        <div class="brand-subtitle">Junior | Machine Learning Engineer</div>
+                        <div class="brand-subtitle">Intern | Machine Learning Engineer</div>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
@@ -73,7 +73,7 @@
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Who am I ?</h3>
                 <span class="line mb-5"></span>
-                <h5 class="mb-3">A junior Machine Learning Engineer / A student of Ho Chi Minh City University of Technology (HCMUT)</h5>
+                <h5 class="mb-3">An Intern Machine Learning Engineer / A student of Ho Chi Minh City University of Technology (HCMUT)</h5>
                 <p class="mt-20">Lorem ipsum dolor sit amet, consectetur adipisicing elit.sit amet, Qui deserunt consequatur fugit repellendusillo voluptas?</p>
                 <a href="CV/MY_CV.pdf" download="DINH TRAC DUC ANH"><button class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>Download My CV</button></a>
             </div>
